--- a/client/src/components/subscribe/subscribe.css
+++ b/client/src/components/subscribe/subscribe.css
@@ -1,17 +1,20 @@
-.mail {
+.subscribe {
     margin-top: 50px;
+    margin-left: 0;
+    margin-right: 0;
     background-color: #008B8B;
     color: white;
     padding: 50px;
-    border-radius: 5px;
+    width: 100%;
+    gap: 20px;
 }
 
-.mailTitle {
+.subscribeTitle {
     font-size: 2.5rem;
     font-weight: bold;
 }
 
-.mailDesc {
+.subscribeDesc {
     font-size: 1.25rem;
 }
 
