modify the code for api

--- a/client/src/pages/list/list.css
+++ b/client/src/pages/list/list.css
@@ -4,6 +4,10 @@
     padding: 5px;
 }
 
+.lsInput::placeholder {
+    color: black;
+}
+
 .listSearch {
     flex: 1;
     background-color: #febb02;
