--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -2,14 +2,14 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .lContainer {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 10%;
+  width: 8%;
 }
 
 .Input{
@@ -17,14 +17,10 @@
   padding: 10px;
 }
 
-.Register_Input{
-  height: 30px;
-  padding: 10px;
-}
 
 .Button {
   border: none;
-  padding: 10px 20px;
+  padding: 10px 10px;
   background-color: #0071c2;
   color: white;
   font-weight: bold;
@@ -35,4 +31,11 @@
 .lButton:disabled{
   background-color: #0071c28c;
   cursor: not-allowed;
+}
+
+.buttonCon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
