--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,15 +1,15 @@
 .profileCon {
-   margin-top: 100px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pContainer{
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 50%;
+  width: 20%;
 }
 
 .Input{
