--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,22 +1,26 @@
 .profileCon {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top:100px;
 }
 
 .pContainer{
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 20%;
+  width: 30%;
+}
+
+.form-group {
+  margin-bottom: 1rem;
 }
 
 .Input{
   height: 40px;
   margin: 10px;
   padding: 15px;
-  width: 300px;
+  width: 100%;
 }
 
 .Button {
@@ -34,8 +38,6 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 700px;
-  margin: 10px;
 }
 
 .linkMargin{
